Fixed scrollbar

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,15 +26,14 @@ $sharp-theme: mat-light-theme((
 
 @import "./theme/theme.scss";
 
-/** {
-  font-family: 'Montserrat';
-}*/
+
 html, body {
   height: 100%;
 }
 body {
   margin: 0;
   font-family: 'Montserrat';
+  overflow: hidden;
 }
 
 //COLORS
@@ -109,4 +108,17 @@ body {
     font-weight: 300;
     line-height: 64px;
   }
+}
+
+.no-v-scroll {
+  height: 100%;
+  overflow-y: hidden;
+  display: flex;
+  flex-direction: column;
+}
+
+
+.mat-sidenav {
+  display: flex;
+  flex-direction: column;
 }
